# LedgerFlow

./: .coverage  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
command_api/: Dockerfile
command_api/app/: __init__.py  main.py  services.py
command_api/tests/: test_cmd_api.py  test_services.py
processor/: Dockerfile
processor/app/: __init__.py  main.py  services.py
projector/: Dockerfile
projector/app/: __init__.py  main.py  services.py
query_api/: Dockerfile
query_api/app/: __init__.py  main.py  schemas.py  services.py
query_api/tests/: test_query_api.py
shared/: __init__.py  commands.py  events.py  models.py
shared/tests/: test_events.py
test-runner/: Dockerfile
tests/: test_integration.py
